--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,18 +9,18 @@ on:
 jobs: 
   build: 
     runs-on: ubuntu-latest 
+    
     steps: 
-    - uses: actions/checkout@v4 
-    - name: docker login 
-      env: 
-        DOCKER_USER: ${{secrets.DOCKERHUB_USER}} 
-        DOCKER_PASS: ${{secrets.DOCKERHUB_PASS}} 
-      run: | 
-        docker login -u $DOCKER_USER -p $DOCKER_PASS 
-    - name: Build the Docker image
-        
-      run: docker build . --file Dockerfile --tag jjboterog/express-randomquotes:latest 
+      - uses: actions/checkout@v4
       
-    - name: Docker Push 
-      run: docker push jjboterog/express-randomquotes
-
+      - name: Docker Login
+        env: 
+          DOCKER_USER: ${{ secrets.DOCKERHUB_USER }} 
+          DOCKER_PASS: ${{ secrets.DOCKERHUB_PASS }} 
+        run: docker login -u $DOCKER_USER -p $DOCKER_PASS 
+      
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag jjboterog/express-randomquotes:latest
+      
+      - name: Docker Push
+        run: docker push jjboterog/express-randomquotes:latest
